--- a/Developing Data Products.Rmd
+++ b/Developing Data Products.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Developing Data Products"
+title: "My First Leaflet Map"
 author: "Shatabdi"
-date: "24/10/2021"
-output: html_document
+date: ""
+output/: html_document/
 ---
 
 ```{r setup, include=FALSE}
@@ -14,6 +14,7 @@ Create a leaflet map object.
 ```{r cars}
 library(leaflet)
 map <- leaflet() %>% addTiles()
+
 ```
 
 Create a marker with a picture of Benrath Palace and a link to its homepage.
